--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
     </build>
     <repositories>
         <repository>
+            <id>mvnrepository</id>
+            <url>https://mvnrepository.com/artifact</url>
+        </repository>
+        <repository>
             <id>sonatypeSnapshots</id>
             <name>Sonatype Snapshots</name>
             <releases>
@@ -76,12 +80,6 @@
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
             <version>1.4</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20190722</version>
         </dependency>
 
     </dependencies>
